# ng

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ng/: assert.h  entity.cpp  entity.h  fvec.h  game.cpp  game.h  gl_util.cpp  gl_util.h  graphics.cpp  graphics.h  key_handler.cpp  key_handler.h  main.cpp  mouse_handler.cpp  mouse_handler.h  properties.h  utility.cpp  utility.h  window.cpp  window.h
nn/: neat.cpp  neat.h
src/: main.cpp
